@@ -304,9 +304,14 @@ Example: \code{httplib.responses[httplib.NOT_FOUND]} is \code{'Not Found'}.
 This will send a request to the server using the HTTP request method
 \var{method} and the selector \var{url}.  If the \var{body} argument is
 present, it should be a string of data to send after the headers are finished.
+Alternatively, it may be an open file object, in which case the
+contents of the file is sent; this file object should support
+\code{fileno()} and \code{read()} methods.
 The header Content-Length is automatically set to the correct value.
 The \var{headers} argument should be a mapping of extra HTTP headers to send
 with the request.
+
+\versionchanged[\var{body} can be a file object]{2.6}
 \end{methoddesc}
 
 \begin{methoddesc}{getresponse}{}
